fixed timer spacing

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,7 @@ body {
 
 
 #menu {
+  display: none;
   position: absolute;
   width: 100vw;
   height: 100vh;
